2009-11-09  Carol Szabo  <carol.szabo@nokia.com>

Reviewed by Darin Adler.

        showTree(CounterNode*) generates too little info and has too many spaces.
        https://bugs.webkit.org/show_bug.cgi?id=31212

        No new tests as the change has no functional effect it is just for
        improved debugging.

        * rendering/CounterNode.cpp:
        (WebCore::showTreeAndMark):
        Changed to also show addresses of parent, next and previous
        siblings.

Canonical link: https://commits.webkit.org/42103@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50673 268f45cc-cd09-0410-ab3c-d52691b4dbfc